# tune-tarn

./: .gitignore  Cargo.toml  docker-compose.dev.yaml
server/: Cargo.toml
server/migrations/: 20260113153717_initial.down.sql  20260113153717_initial.up.sql
server/src/: authentication.rs  global.rs  main.rs
server/src/endpoints/: mod.rs
server/src/endpoints/rest/: mod.rs  ping.rs
server/src/endpoints/testing/: add_user.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: api_keys.rs  mod.rs  users.rs
server/src/responses/: error.rs  mod.rs  subsonic.rs
server/tunetarn-api/: bruno.json
server/tunetarn-api/environments/: Local.bru
server/tunetarn-api/rest/: Ping.bru  folder.bru
server/tunetarn-api/testing/: New User.bru  folder.bru
src/: main.rs  yt.rs
