[package]
name = "tune-tarn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "derive", "macros", "uuid" ] }


yt-dlp = { version = "1.4.7", features = ["cache", "rustls", "tracing"] }
ytmapi-rs = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.2"
thiserror = "2.0.17"
rand = "0.9.2"
sha2 = "0.10.9"
dotenvy = "0.15.7"
